--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "devDependencies": {
     "events": "^1.1.1",
-    "flux": "^3.1.2",
     "react-scripts": "0.8.5",
-    "immutable": "3.8.1"
+    "redux-devtools": "^3.3.2"
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
