--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "devDependencies": {
     "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "events": "^3.0.0",
     "react-scripts": "^3.1.1"
   },
@@ -19,6 +23,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "lint": "eslint src/**/*.js src/**/*.jsx",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
